--- a/_posts/2017-01-22-set-goals-for-2017.md
+++ b/_posts/2017-01-22-set-goals-for-2017.md
@@ -14,9 +14,9 @@ permalink: "/2017/01/goal-setting-2017.html"
 --- John Schnatter
 
 
-I gradually realize the importance of setting goals and write them down. what I also realize is that most people do set goals at the beginning of every year but forget/give up them after 2, 3 weeks : )
+I gradually realize the importance of setting goals and writing them down. what I also realize is that most people do set goals at the beginning of every year but forget/give up them after 2, 3 weeks : )
 
-One of the lessons I learned from my last year’s fitness training is that human beings are much more likely to stick with the goal if the goal is shared to people around you, then we you tend to quite, the group pressure will kick in and save your goal.
+One of the lessons I learned from my last year’s fitness training is that human beings are much more likely to stick with the goal if the goal is shared to people around you, then when you tend to quite, the group pressure will kick in and save your goal.
 
 So I decide to write down my 2017 personal goals and share them with you. I will try to make them as measurable as possible, but some of them will be a bit vague, if you have suggestions about how to set better goals, let me know.
 
