--- a/_posts/2017-01-22-set-goals-for-2017.md
+++ b/_posts/2017-01-22-set-goals-for-2017.md
@@ -33,4 +33,4 @@ The plan is: by the end of the year, I am going to come back here and review the
 * Improve English level, especially writing and speaking skill. Be able to give a public speech in familiar topic
 * Be a strategic thinker at Sparta. Get involved in product, recruiting, marketing strategy plan for 2017.
 * Learning machine learning modeling, be able to apply ML models to solve real world problems.
-* Share my knowledge to the communities. Get stackoverflow points up to 2000, contribute to at least 1 open source project, create 1 open source repo.
+* Share my knowledge to the communities. Get Stackoverflow points up to 2000, contribute to at least 1 open source project, create 1 open source repo.
